--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.8.0",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
